# UnderwaterWorld

./: LICENSE  README.md
resources/Blue/: LINK.txt
resources/Green/: LINK.txt
resources/Mini Submarine - 3669151/: LICENSE.txt  LINK.txt  README.txt
resources/Mini Submarine - 3669151/files/: Submarine.scad  Submarine.stl
resources/Red/: LINK.txt
resources/Submarine/: LINK.txt  Submarine.3ds  Submarine.c4d  Submarine.fbx  Submarine.mtl
underwater_world/: Cargo.toml  wasm.sh
underwater_world/src/: boid.rs  boid_obj.rs  camera.rs  chunk.rs  consts.rs  draw.rs  fish.wgsl  lib.rs  main.rs  marching_table.rs  perlin_util.rs  shader.wgsl  state.rs  sub.rs  sub.wgsl  sub_obj.rs  terrain.wgsl  texture.rs  timer.rs  util.rs  world.rs
web_build/: index.html
web_build/pkg/: underwater_world.js  underwater_world_bg.wasm
